feat: 台股 DRIP 與當沖證交稅減半（#263） (#298)
* feat: 台股 DRIP 與當沖證交稅減半


* chore: prepare v4.138.0 release metadata


* fix: harden Taiwan day-trade eligibility


---------
